@@ -1,4 +1,5 @@
 {START_FORM}
+{ALL_IMAGES_LABEL} {ALL_IMAGES}
 <table cellpadding="4" width="100%">
    <tr>
       <th width="1%">&nbsp;</th>
@@ -16,5 +17,8 @@
 <!-- END file-list -->
 </table>
 <hr />
-{CHECK_ALL}&nbsp;&nbsp;{AOP} {SUBMIT}
+{CHECK_ALL}&nbsp;&nbsp;{PROCESS_CHECKED} {SUBMIT}<br />
+<!-- BEGIN images -->{IMAGE_FOLDERS} {IMAGE_FORCE}<br /><!-- END images -->
+<!-- BEGIN document -->{DOCUMENT_FOLDERS} {DOCUMENT_FORCE}<br /><!-- END document -->
+<!-- BEGIN media -->{MEDIA_FOLDERS} {MEDIA_FORCE}<!-- END media -->
 {END_FORM}
